fixed load more button overflow problem

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -250,10 +250,10 @@ body {
 #load-more-button {
     display: block;
     margin:0 auto;
-    font-size: 9pt;
-    border: solid 1px #000000;
+    font-size: 8pt;
+/*    border: solid 1px #000000;*/
     color: #585858;
-    background-color: transparent;
+    background-color: #F0F0F0;
 }
 
 /* Large desktops and laptops */
